--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "node": ">=18.18.0 <19.0.0"
   },
   "scripts": {
-    "start": "nodemon Server.js",
+    "start": "node Server.js",
     "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
