--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,14 @@
   "name": "server",
   "version": "1.1.0",
   "description": "",
-  "main": "server.js",
+  "main": "Server.js",
   "engines": {
     "node": ">=18.18.0 <19.0.0"
   },
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node Server.js",
+    "dev": "nodemon Server.js",
     "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
